// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Outputs artifacts builds all the artifacts with rollup 1`] = `
Array [
  "/cjs/server.cjs",
  "// Generated with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: cjs
'use strict';

const https = require('https');

function _interopDefaultLegacy(e) {
  return e && typeof e === 'object' && 'default' in e ? e : {
    'default': e
  };
}

const https__default = /*#__PURE__*/_interopDefaultLegacy(https);

https__default['default'].createServer((req, res) => {
  res.writeHead(200, {
    'Content-Type': 'text/plain'
  });
  res.write('Hello World!');
  res.end();
}).listen(8080);
//# sourceMappingURL=server.cjs.map
",
]
`;

exports[`Outputs artifacts builds all the artifacts with rollup 2`] = `
Array [
  "/esm/client.js",
  "function _createForOfIteratorHelper(o, allowArrayLike) { var it = typeof Symbol !== \\"undefined\\" && o[Symbol.iterator] || o[\\"@@iterator\\"]; if (!it) { if (Array.isArray(o) || (it = _unsupportedIterableToArray(o)) || allowArrayLike && o && typeof o.length === \\"number\\") { if (it) o = it; var i = 0; var F = function F() {}; return { s: F, n: function n() { if (i >= o.length) return { done: true }; return { done: false, value: o[i++] }; }, e: function e(_e) { throw _e; }, f: F }; } throw new TypeError(\\"Invalid attempt to iterate non-iterable instance.\\\\nIn order to be iterable, non-array objects must have a [Symbol.iterator]() method.\\"); } var normalCompletion = true, didErr = false, err; return { s: function s() { it = it.call(o); }, n: function n() { var step = it.next(); normalCompletion = step.done; return step; }, e: function e(_e2) { didErr = true; err = _e2; }, f: function f() { try { if (!normalCompletion && it.return != null) it.return(); } finally { if (didErr) throw err; } } }; }

function _unsupportedIterableToArray(o, minLen) { if (!o) return; if (typeof o === \\"string\\") return _arrayLikeToArray(o, minLen); var n = Object.prototype.toString.call(o).slice(8, -1); if (n === \\"Object\\" && o.constructor) n = o.constructor.name; if (n === \\"Map\\" || n === \\"Set\\") return Array.from(o); if (n === \\"Arguments\\" || /^(?:Ui|I)nt(?:8|16|32)(?:Clamped)?Array$/.test(n)) return _arrayLikeToArray(o, minLen); }

function _arrayLikeToArray(arr, len) { if (len == null || len > arr.length) len = arr.length; for (var i = 0, arr2 = new Array(len); i < len; i++) { arr2[i] = arr[i]; } return arr2; }

import _regeneratorRuntime from \\"@babel/runtime/regenerator\\";

var createClient = function createClient() {
  try {
    return Promise.resolve(wait()).then(function () {
      var _iterator = _createForOfIteratorHelper(gen()),
          _step;

      try {
        for (_iterator.s(); !(_step = _iterator.n()).done;) {
          var iterator = _step.value;
          console.log(iterator);
        }
      } catch (err) {
        _iterator.e(err);
      } finally {
        _iterator.f();
      }

      return new Client();
    });
  } catch (e) {
    return Promise.reject(e);
  }
};

var wait = function wait() {
  return Promise.resolve();
};

var _marked = /*#__PURE__*/_regeneratorRuntime.mark(gen);

function _classCallCheck(instance, Constructor) { if (!(instance instanceof Constructor)) { throw new TypeError(\\"Cannot call a class as a function\\"); } }

function _defineProperty(obj, key, value) { if (key in obj) { Object.defineProperty(obj, key, { value: value, enumerable: true, configurable: true, writable: true }); } else { obj[key] = value; } return obj; }

// Generated with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: esm
var Client = function Client() {
  _classCallCheck(this, Client);

  _defineProperty(this, \\"prop\\", 123);
};

function gen() {
  return _regeneratorRuntime.wrap(function gen$(_context) {
    while (1) {
      switch (_context.prev = _context.next) {
        case 0:
        case \\"end\\":
          return _context.stop();
      }
    }
  }, _marked);
}

export { createClient };
//# sourceMappingURL=client.js.map
",
]
`;

exports[`Outputs artifacts builds all the artifacts with rollup 3`] = `
Array [
  "/lib/client.js",
  "// Generated with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: lib
'use strict';

var _regeneratorRuntime = require(\\"@babel/runtime/regenerator\\");

function _createForOfIteratorHelper(o, allowArrayLike) { var it = typeof Symbol !== \\"undefined\\" && o[Symbol.iterator] || o[\\"@@iterator\\"]; if (!it) { if (Array.isArray(o) || (it = _unsupportedIterableToArray(o)) || allowArrayLike && o && typeof o.length === \\"number\\") { if (it) o = it; var i = 0; var F = function F() {}; return { s: F, n: function n() { if (i >= o.length) return { done: true }; return { done: false, value: o[i++] }; }, e: function e(_e) { throw _e; }, f: F }; } throw new TypeError(\\"Invalid attempt to iterate non-iterable instance.\\\\nIn order to be iterable, non-array objects must have a [Symbol.iterator]() method.\\"); } var normalCompletion = true, didErr = false, err; return { s: function s() { it = it.call(o); }, n: function n() { var step = it.next(); normalCompletion = step.done; return step; }, e: function e(_e2) { didErr = true; err = _e2; }, f: function f() { try { if (!normalCompletion && it.return != null) it.return(); } finally { if (didErr) throw err; } } }; }

function _unsupportedIterableToArray(o, minLen) { if (!o) return; if (typeof o === \\"string\\") return _arrayLikeToArray(o, minLen); var n = Object.prototype.toString.call(o).slice(8, -1); if (n === \\"Object\\" && o.constructor) n = o.constructor.name; if (n === \\"Map\\" || n === \\"Set\\") return Array.from(o); if (n === \\"Arguments\\" || /^(?:Ui|I)nt(?:8|16|32)(?:Clamped)?Array$/.test(n)) return _arrayLikeToArray(o, minLen); }

function _arrayLikeToArray(arr, len) { if (len == null || len > arr.length) len = arr.length; for (var i = 0, arr2 = new Array(len); i < len; i++) { arr2[i] = arr[i]; } return arr2; }

var createClient = function createClient() {
  try {
    return Promise.resolve(wait()).then(function () {
      var _iterator = _createForOfIteratorHelper(gen()),
          _step;

      try {
        for (_iterator.s(); !(_step = _iterator.n()).done;) {
          var iterator = _step.value;
          console.log(iterator);
        }
      } catch (err) {
        _iterator.e(err);
      } finally {
        _iterator.f();
      }

      return new Client();
    });
  } catch (e) {
    return Promise.reject(e);
  }
};

var wait = function wait() {
  return Promise.resolve();
};

var _marked = /*#__PURE__*/_regeneratorRuntime.mark(gen);

function _classCallCheck(instance, Constructor) { if (!(instance instanceof Constructor)) { throw new TypeError(\\"Cannot call a class as a function\\"); } }

function _defineProperty(obj, key, value) { if (key in obj) { Object.defineProperty(obj, key, { value: value, enumerable: true, configurable: true, writable: true }); } else { obj[key] = value; } return obj; }

Object.defineProperty(exports, '__esModule', {
  value: true
});

var Client = function Client() {
  _classCallCheck(this, Client);

  _defineProperty(this, \\"prop\\", 123);
};

function gen() {
  return _regeneratorRuntime.wrap(function gen$(_context) {
    while (1) {
      switch (_context.prev = _context.next) {
        case 0:
        case \\"end\\":
          return _context.stop();
      }
    }
  }, _marked);
}

exports.createClient = createClient;
//# sourceMappingURL=client.js.map
",
]
`;

exports[`Outputs artifacts builds all the artifacts with rollup 4`] = `
Array [
  "/lib/index.js",
  "// Generated with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const EXAMPLE = 'foo';
exports.EXAMPLE = EXAMPLE;
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs artifacts builds all the artifacts with rollup 5`] = `
Array [
  "/lib/test.js",
  "// Generated with Packemon: https://packemon.dev
// Platform: native, Support: experimental, Format: lib
'use strict';

function _defineProperty(obj, key, value) { if (key in obj) { Object.defineProperty(obj, key, { value: value, enumerable: true, configurable: true, writable: true }); } else { obj[key] = value; } return obj; }

Object.defineProperty(exports, '__esModule', {
  value: true
});

class Spy {
  constructor() {
    _defineProperty(this, \\"called\\", false);

    _defineProperty(this, \\"mock\\", () => {});
  }

  method() {}

}

function spy() {
  const inst = new Spy();
  return jest.fn(inst.mock);
}

async function wait() {}

exports.spy = spy;
exports.wait = wait;
//# sourceMappingURL=test.js.map
",
]
`;

exports[`Outputs artifacts builds all the artifacts with rollup 6`] = `
Array [
  "/package.json",
  Object {
    "dependencies": Object {
      "typescript": "*",
    },
    "files": Array [
      "cjs/**/*.{cjs,map}",
      "esm/**/*.{js,map}",
      "lib/**/*.{js,map}",
      "src/**/*.{ts,tsx,json}",
      "umd/**/*.{js,map}",
    ],
    "main": "./lib/index.js",
    "name": "project-rollup",
    "packemon": Object {
      "inputs": Object {
        "client": "src/client.ts",
        "index": "src/index.ts",
        "server": "src/server/core.ts",
        "test": "src/test-utils/base.ts",
      },
    },
  },
]
`;

exports[`Outputs artifacts builds all the artifacts with rollup 7`] = `
Array [
  "/umd/client.js",
  "(function (global, factory) {
  if (typeof define === \\"function\\" && define.amd) {
    define(\\"Packemon\\", [\\"exports\\"], factory);
  } else if (typeof exports !== \\"undefined\\") {
    factory(exports);
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports);
    global.Packemon = mod.exports;
  }
})(typeof globalThis !== \\"undefined\\" ? globalThis : typeof self !== \\"undefined\\" ? self : this, function (_exports) {
  \\"use strict\\";

  Object.defineProperty(_exports, \\"__esModule\\", {
    value: true
  });
  _exports.createClient = createClient;

  function _defineProperty(obj, key, value) { if (key in obj) { Object.defineProperty(obj, key, { value: value, enumerable: true, configurable: true, writable: true }); } else { obj[key] = value; } return obj; }

  // Generated with Packemon: https://packemon.dev
  // Platform: browser, Support: experimental, Format: umd
  class Client {
    constructor() {
      _defineProperty(this, \\"prop\\", 123);
    }

  }

  function* gen() {}

  async function wait() {}

  async function createClient() {
    await wait();

    for (const iterator of gen()) {
      console.log(iterator);
    }

    return new Client();
  }
});
//# sourceMappingURL=client.js.map
",
]
`;

exports[`Outputs artifacts builds all the artifacts with rollup 8`] = `
Array [
  Object {
    "format": "lib",
    "platform": "node",
    "stats": Object {
      "size": 227,
    },
    "support": "stable",
  },
]
`;

exports[`Outputs bundle bundles all files into a single file with rollup 1`] = `
Array [
  "/lib/index.js",
  "// Generated with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});

function foo() {}

function bar() {}

exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs bundle bundles all files into a single file with rollup 2`] = `
Array [
  "/package.json",
  Object {
    "files": Array [
      "lib/**/*.{js,map}",
      "src/**/*.{ts,tsx,json}",
    ],
    "main": "./lib/index.js",
    "name": "project-bundle",
    "packemon": Object {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;

exports[`Outputs no bundle creates individual files for every source file 1`] = `
Array [
  "/lib/index.js",
  "'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});

var other = require('./other.js');

function bar() {}

exports.foo = other.foo;
exports.bar = bar;
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs no bundle creates individual files for every source file 2`] = `
Array [
  "/lib/not-imported.js",
  "'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});

function baz() {}

exports.baz = baz;
//# sourceMappingURL=not-imported.js.map
",
]
`;

exports[`Outputs no bundle creates individual files for every source file 3`] = `
Array [
  "/lib/other.js",
  "'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});

function foo() {}

exports.foo = foo;
//# sourceMappingURL=other.js.map
",
]
`;

exports[`Outputs no bundle creates individual files for every source file 4`] = `
Array [
  "/package.json",
  Object {
    "files": Array [
      "lib/**/*.{js,map}",
      "src/**/*.{ts,tsx,json}",
    ],
    "main": "./lib/index.js",
    "name": "project-bundle",
    "packemon": Object {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;
